--- a/grid_base_features/grid-feats-vqa/inspect.ipynb
+++ b/grid_base_features/grid-feats-vqa/inspect.ipynb
@@ -32,6 +32,28 @@
     "import numpy as np\n",
     "len(np.unique(a.flatten()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "761"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "save_dir = \"F:\\\\UNIVERSITY\\\\NCKH\\\\NCKH_V2\\\\code\\\\feature_extraction\\\\grid_base_features\\\\grid-feats-vqa\\\\output\\\\features\"\n",
+    "len(os.listdir(save_dir))"
+   ]
   }
  ],
  "metadata": {
